--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@
   .navbar-brand {
     margin-bottom: 10px; }
     .navbar-brand > img {
-      width: 20%; } }
+      width: 40%; } }
 
 .hovereffect {
   width: 100%;
@@ -53,7 +53,9 @@
     top: 0;
     left: 0;
     background-color: rgba(220, 199, 179, 0.2);
-    transition: all 0.4s ease-in-out; }
+    transition: opacity 0.4s, -webkit-transform 0.35s;
+    transition: opacity 0.4s, transform 0.35s;
+    transition: opacity 0.4s, transform 0.35s, -webkit-transform 0.35s; }
   .hovereffect h2.title {
     text-transform: uppercase;
     color: #fff;
@@ -65,29 +67,31 @@
     -webkit-transform: translateY(45px);
     -ms-transform: translateY(45px);
     transform: translateY(45px);
-    transition: all 0.4s ease-in-out; }
+    transition: opacity 0.4s, -webkit-transform 0.35s;
+    transition: opacity 0.4s, transform 0.35s;
+    transition: opacity 0.4s, transform 0.35s, -webkit-transform 0.35s; }
   .hovereffect img {
     display: block;
-    position: relative; }
+    position: relative;
+    width: 100%}
   .hovereffect a.info {
     display: inline-block;
     text-decoration: none;
     padding: 7px 14px;
     text-transform: uppercase;
     color: white;
-    border: 1px solid white;
     background-color: transparent;
     opacity: 0;
     filter: alpha(opacity=0);
     -webkit-transform: scale(0);
     -ms-transform: scale(0);
     transform: scale(0);
-    transition: all 0.4s ease-in-out;
+    transition: opacity 0.4s, -webkit-transform 0.35s;
+    transition: opacity 0.4s, transform 0.35s;
+    transition: opacity 0.4s, transform 0.35s, -webkit-transform 0.35s;
     font-weight: normal;
     margin: -52px 0 0 0;
     padding: 62px 100px; }
-    .hovereffect a.info:hover {
-      box-shadow: 0 0 5px white; }
   .hovereffect:hover .overlay {
     background-color: rgba(107, 120, 175, 0.7); }
   .hovereffect:hover a.info {
@@ -155,7 +159,8 @@ footer {
   .hovereffect2 img {
     display: block;
     position: relative;
-    transition: all 0.35s; }
+    transition: all 0.35s;
+    width: 100%;}
   .hovereffect2:hover .overlay2 {
     opacity: 1;
     filter: alpha(opacity=100);
@@ -217,7 +222,7 @@ footer {
     color: #7c423f;
     font-size: 4em;
     text-align: center;
-    margin: 5% 0% 5% 0%; }
+    margin: 5% 0% 3% 0%; }
   .heading #about {
     margin-bottom: 0px; }
   .heading h2 {
@@ -236,3 +241,16 @@ footer {
     margin-bottom: 30px; }
   .heading h2 {
     margin-bottom: 30px; } }
+
+.heading #project {
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.special {
+  margin-bottom: 5%;
+}
+
+.aboutgallery {
+  margin-bottom: 5%;
+}
